--- a/goodbye.html
+++ b/goodbye.html
@@ -4,4 +4,7 @@
 <ul>
   <li> English: Goodbye, friends! </li>
   <li> Spanish:  Adios, amigos! </li>
+  <li> Japanese: Sayonara! </li>
+  <li> German: auf Wiedersehen! </li>
+  <li> French: Bon Voyage! </li>
 </ul>
